<resources>
  <string name="app_name">Stride</string>
  <string name="expo_system_ui_user_interface_style" translatable="false">light</string>
  <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
  <string name="expo_runtime_version">1.0.0</string>
</resources>