...
  const router = useRouter();
  const { signOut } = useAuth();

  return (
    <Screen safeArea>
      <Header
        title='Ready to get moving?'
        rightElement={
          // should go to notifications screen
          <Pressable onPress={() => router.push('/(tabs)/home')}>
            <Bell className='size-12' fill={colors.text} />
          </Pressable>
        }
...
        <CurrentWeekView />

        <Text
          variant='title-md'
          style={{ color: colors.text, textAlign: 'left' }}
        >
          Nearby Challenges
        </Text>
        <NearbyChallenges />

        <Button
          title='Logout'
          variant='danger'
...
